# afrodite-backend

./: .dockerignore  .env  .gitignore  .gitmodules  Cargo.toml  Dockerfile  LICENSE  LICENSE-MIT  Makefile  README.md  build.rs  diesel.toml  manager-pre-build-script.sh  server_config_custom_reports.toml  server_config_notification_content.toml
crates/afrodite-backend/: Cargo.toml
crates/afrodite-backend/src/: args.rs  build_info.rs  config_tools.rs  data_tools.rs  main.rs  process_lock.rs
crates/afrodite-backend/src/data_tools/: csv.rs
crates/afrodite_backend/: Cargo.toml
crates/afrodite_backend/src/: build_info.rs  main.rs
crates/config/: Cargo.toml
crates/config/src/: args.rs  bot_config_file.rs  csv.rs  edit.rs  file.rs  file_dynamic.rs  file_email_content.rs  file_notification_content.rs  file_web_content.rs  lib.rs  profile_name_allowlist.rs
crates/config/src/bot_config_file/: internal.rs
crates/config/src/csv/: attribute_values.rs  profile_name_allowlist.rs
crates/config/src/file/: utils.rs
crates/database/: Cargo.toml
crates/database/src/: current.rs  db_macros.rs  diesel.rs  history.rs  lib.rs  sqlite.rs
crates/database/src/current/: read.rs  write.rs
crates/database/src/history/: read.rs  write.rs
crates/database_account/: Cargo.toml
crates/database_account/src/current/: read.rs  write.rs
crates/database_account/src/history/: read.rs  write.rs
crates/database_chat/: Cargo.toml
crates/database_chat/src/: lib.rs
crates/database_chat/src/current/: read.rs  write.rs
crates/database_chat/src/history/: read.rs  write.rs
crates/database_media/: Cargo.toml
crates/database_media/src/current/: read.rs  write.rs
crates/database_media/src/history/: read.rs  write.rs
crates/database_profile/: Cargo.toml
crates/database_profile/src/: lib.rs
crates/database_profile/src/current/: read.rs  write.rs
crates/database_profile/src/history/: read.rs  write.rs
crates/dating_app_backend/: Cargo.toml  build.rs
crates/dating_app_backend/src/: main.rs
crates/image_process/: Cargo.toml
crates/image_process/src/: lib.rs
crates/manager/: Cargo.toml
crates/manager/src/: api.rs  client.rs  config.rs  lib.rs  server.rs  utils.rs
crates/manager/src/api/: client.rs  manager.rs  server.rs  utils.rs
crates/manager/src/config/: args.rs  file.rs
crates/manager/src/server/: app.rs  backend_controller.rs  backend_events.rs  backend_manager.rs  client.rs  info.rs  link.rs  mount.rs  reboot.rs  scheduled_task.rs  state.rs  task.rs  update.rs
crates/manager_api/: Cargo.toml
crates/manager_api/src/: backup.rs  lib.rs  protocol.rs
crates/manager_api_client/: .openapi-generator-ignore  Cargo.toml  README.md
crates/manager_api_client/.openapi-generator/: FILES
crates/manager_api_client/src/apis/: configuration.rs  manager_api.rs
crates/manager_api_client/src/models/: build_info.rs  command_output.rs  data_encryption_key.rs  download_type.rs  download_type_query_param.rs  reboot_query_param.rs  reset_data_query_param.rs  server_name_text.rs  software_info.rs  software_options.rs  software_options_query_param.rs  system_info.rs  system_info_list.rs
crates/manager_config/: Cargo.toml
crates/manager_config/src/: args.rs  file.rs  lib.rs
crates/manager_model/: Cargo.toml
crates/manager_model/src/: backup.rs  json_rpc.rs  lib.rs  link.rs  manager.rs  secure_storage.rs  software.rs  system_info.rs  task.rs
crates/manager_model/src/link/: backup.rs
crates/model/: Cargo.toml
crates/model/src/: account.rs  account_admin.rs  chat.rs  common.rs  common_admin.rs  common_history.rs  db_only.rs  lib.rs  macros.rs  markers.rs  media.rs  media_admin.rs  profile.rs  profile_admin.rs  schema.rs
crates/model/src/account/: account_admin.rs  account_created_time.rs  client_features.rs  custom_reports.rs  demo.rs  email.rs  news.rs  time.rs  verification.rs
crates/model/src/account_admin/: news.rs
crates/model/src/chat/: db_only.rs  interaction.rs  matches.rs  public_key.rs  push_notifications.rs  received_likes.rs  sync_version.rs  transfer.rs
crates/model_account/: Cargo.toml
crates/model_account/src/: account.rs  account_admin.rs  lib.rs  markers_account.rs  profile.rs
crates/model_chat/: Cargo.toml
crates/model_chat/src/: chat.rs  chat_admin.rs  lib.rs
crates/model_server_data/: Cargo.toml
crates/model_server_data/src/: account.rs  chat.rs  common.rs  lib.rs  markers_server_data.rs  media.rs  profile.rs  profile_admin.rs
crates/model_server_state/: Cargo.toml
crates/model_server_state/src/: lib.rs  markers_server_state.rs
crates/obfuscate_api_macro/: Cargo.toml
crates/obfuscate_api_macro/src/: lib.rs
crates/pihka-backend/: Cargo.toml  build.rs
crates/pihka-backend/src/: args.rs  main.rs
crates/server/: Cargo.toml
crates/server/src/: admin_bot_status.rs  admin_notifications.rs  api.rs  api_doc.rs  app.rs  bot.rs  content_processing.rs  daily_likes.rs  data.rs  data_export.rs  demo.rs  dynamic_config.rs  email.rs  event.rs  hourly_tasks.rs  image.rs  internal.rs  internal_api.rs  lib.rs  litestream.rs  manager_client.rs  map.rs  media_backup.rs  perf.rs  profile_search.rs  push_notifications.rs  result.rs  scheduled_tasks.rs  shutdown_tasks.rs  startup_tasks.rs  task_utils.rs  unlimited_likes.rs  utils.rs
crates/server_api/: Cargo.toml
crates/server_api/src/: account_internal.rs  app.rs  common.rs  common_admin.rs  common_internal.rs  internal_api.rs  lib.rs  media.rs  media_internal.rs  utils.rs
crates/server_api_account/: Cargo.toml
crates/server_api_account/src/: account.rs  account_admin.rs  account_bot.rs  account_internal.rs  app.rs  lib.rs
crates/server_api_all/: Cargo.toml
crates/server_api_all/src/: connection.rs  lib.rs  register.rs
crates/server_api_chat/: Cargo.toml
crates/server_api_chat/src/: chat.rs  chat_admin.rs  lib.rs
crates/server_api_media/: Cargo.toml
crates/server_api_media/src/: internal_api.rs  lib.rs  media.rs  media_admin.rs  media_internal.rs
crates/server_api_profile/: Cargo.toml
crates/server_api_profile/src/: lib.rs  profile.rs  profile_admin.rs
(+2269 files in other folders)
