[workspace]
resolver = "2"
members = [
    # From git submodule
    "crates/app-manager/crates/manager_model",
    "crates/app-manager/crates/manager_api",
    # Binary crates
    "crates/dating_app_backend",
    # Library crates
    "crates/api_client",
    "crates/api_internal",
    "crates/model",
    "crates/model_account",
    "crates/config",
    "crates/utils",
    "crates/test_mode",
    "crates/test_mode_macro",
    "crates/database",
    "crates/database_chat",
    "crates/database_profile",
    "crates/database_media",
    "crates/database_account",
    "crates/server",
    "crates/server_common",
    "crates/server_state",
    "crates/server_router_chat",
    "crates/server_router_profile",
    "crates/server_router_media",
    "crates/server_router_account",
    "crates/server_api",
    "crates/server_api_chat",
    "crates/server_api_profile",
    "crates/server_api_media",
    "crates/server_api_account",
    "crates/server_data",
    "crates/server_data_chat",
    "crates/server_data_profile",
    "crates/server_data_media",
    "crates/server_data_account",
    "crates/server_data_all",
    "crates/simple_backend",
    "crates/simple_backend_image_process",
    "crates/simple_backend_config",
    "crates/simple_backend_utils",
    "crates/simple_backend_database",
    "crates/simple_backend_model",
    "crates/obfuscate_api_macro",
]

[workspace.dependencies]

# Build dependencies
vergen-gitcl = { version = "1.0.0", features = ["build", "cargo", "rustc"] }

error-stack = "0.5.0"
thiserror = "1.0.63"

rand = "0.8.5"
rand_xoshiro = "0.6.0"
chrono = { version = "0.4.38", features = ["serde"] }
uuid = { version = "1.10.0", features = ["v4", "serde"] }
base64 = "0.22.1"
nalgebra = "0.33.0"
num_cpus = "1.16.0"
nix = { version = "0.29.0", default-features = false, features = ["signal"] }
image = { version = "0.25.5", default-features = false, features = ["jpeg"] }
mozjpeg = "0.10.9"
bitflags = "2.6.0"
num_enum = "0.7.3"
sha2 = "0.10.8"

clap = { version = "4.5.16", features = ["cargo", "derive"] }

tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
# For tokio-console debugging. Disabled currently.
# If you want to enable this uncomment also .cargo
# console-subscriber = "0.2.0"

serde = { version = "1.0.208", features = ["derive"] }
serde_json = "1.0.125"
toml = "0.8.19"
toml_edit = "0.22.20"
csv = "1.3.0"

diesel = { version = "2.2.2", features = ["sqlite", "returning_clauses_for_sqlite_3_35", "chrono"] }
diesel_migrations = "2.2.0"
deadpool = { version = "0.12.1" }

futures = "0.3.30"
tokio = { version = "1.39.2", features = ["full"] }
tokio-stream = { version = "0.1.15", features = ["sync", "fs"] }
tokio-util = { version = "0.7.11", features = ["io"]}
async-trait = "0.1.81"

reqwest = { version = "0.12.5", features = ["json"] }
utoipa = { version = "5.1.1", features = ["axum_extras", "uuid", "chrono"] }
utoipa-axum = { version = "0.1.1" }
utoipa-swagger-ui = { version = "8.0.1", features = ["axum", "vendored"] }
url = { version = "2.5.2", features = ["serde"] }
http = "1.1.0"
headers = "0.4.0"
jsonwebtoken = "9.3.0"
hyper = { version = "1.4.1", features = ["full"] }
hyper-util = { version = "0.1.7", features = ["full"] }
axum = { version = "0.7.5", features = ["ws", "macros"] }
axum-extra = { version = "0.9.3", features = ["typed-header"] }
tower = "0.4.13"
tower-http = { version = "0.5.2", features = ["trace"] }

# Email sending
lettre = { version = "0.11.7", features = ["tokio1", "tokio1-native-tls"] }

# File hosting package extracting
flate2 = "1.0.33"
tar = "0.4.41"
mime = "0.3.17"

# Server TLS
tokio-rustls = { version = "0.26.0", default-features = false, features = ["logging", "tls12", "ring"] }
rustls-pemfile = "2.1.3"
rustls-acme = { version = "0.10.1", default-features = false, features = ["tokio", "ring", "tls12"] }

# Procedural macros
syn = { version = "2.0.74", features = ["full"] }
quote = "1.0.36"
sha1 = "0.10.6"

# Test mode
inventory = "0.3.15"
tokio-tungstenite = { version = "0.22.0", features = ["native-tls"] }
pgp = "0.13.2"
bstr = "1.10.0"
async-openai = "0.26.0"
unicode-segmentation = "1.12.0"

# Firebase cloud messaging
[workspace.dependencies.fcm]
git = "https://github.com/jutuon/fcm-rust"
rev = "1788092b8db6aeb50945ff4e279899d9b9336b2e"

# Face detection
[workspace.dependencies.rustface]
git = "https://github.com/jutuon/rustface"
rev = "271563b947d7906f2126e1dfaae292d900171bcb"
default-features = false

# Make image processing faster for debug builds
[profile.dev.package.image]
opt-level = 3

# Improve build time
[profile.dev]
debug = 0
strip = "debuginfo"
