[workspace]
resolver = "2"
members = [
    # Binary crates
    "crates/afrodite_backend",
    # Library crates
    "crates/api_client",
    "crates/api_internal",
    "crates/model",
    "crates/model_server_data",
    "crates/model_server_state",
    "crates/model_chat",
    "crates/model_profile",
    "crates/model_media",
    "crates/model_account",
    "crates/config",
    "crates/utils",
    "crates/test_mode",
    "crates/test_mode_macro",
    "crates/database",
    "crates/database_chat",
    "crates/database_profile",
    "crates/database_media",
    "crates/database_account",
    "crates/server",
    "crates/server_common",
    "crates/server_state",
    "crates/server_router_chat",
    "crates/server_router_profile",
    "crates/server_router_media",
    "crates/server_router_account",
    "crates/server_api",
    "crates/server_api_chat",
    "crates/server_api_profile",
    "crates/server_api_media",
    "crates/server_api_account",
    "crates/server_data",
    "crates/server_data_chat",
    "crates/server_data_profile",
    "crates/server_data_media",
    "crates/server_data_account",
    "crates/server_data_all",
    "crates/simple_backend",
    "crates/simple_backend_image_process",
    "crates/simple_backend_config",
    "crates/simple_backend_utils",
    "crates/simple_backend_database",
    "crates/simple_backend_model",
    # Manager
    "crates/manager",
    "crates/manager_api",
    "crates/manager_api_client",
    "crates/manager_model",
]

[workspace.dependencies]

# Build dependencies
vergen-gitcl = { version = "1.0.5", features = ["build", "cargo", "rustc"] }

error-stack = "0.5.0"
thiserror = "2.0.11"

rand = "0.8.5"
rand_xoshiro = "0.6.0"
chrono = { version = "0.4.39", features = ["serde"] }
uuid = { version = "1.11.1", features = ["v4", "serde"] }
base64 = "0.22.1"
nalgebra = "0.33.2"
num_cpus = "1.16.0"
nix = { version = "0.29.0", default-features = false, features = ["signal"] }
image = { version = "0.25.5", default-features = false, features = ["jpeg"] }
mozjpeg = "0.10.12"
bitflags = "2.7.0"
num_enum = "0.7.3"
sha1 = "0.10.6"
sha2 = "0.10.8"
sysinfo = { version = "0.33.1", default-features = false, features = ["system"] }

clap = { version = "4.5.26", features = ["cargo", "derive"] }

tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
# For tokio-console debugging. Disabled currently.
# If you want to enable this uncomment also .cargo
# console-subscriber = "0.2.0"

serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.135"
toml = "0.8.19"
toml_edit = "0.22.22"
csv = "1.3.1"

diesel = { version = "2.2.6", features = ["sqlite", "returning_clauses_for_sqlite_3_35", "chrono"] }
diesel_migrations = "2.2.0"
deadpool = { version = "0.12.1" }

futures = "0.3.31"
tokio = { version = "1.43.0", features = ["full"] }
tokio-stream = { version = "0.1.17", features = ["sync", "fs"] }
tokio-util = { version = "0.7.13", features = ["io"]}
async-trait = "0.1.85"

reqwest = { version = "0.12.12", default-features = false, features = ["rustls-tls-native-roots", "json", "charset", "http2", "macos-system-configuration"] }
utoipa = { version = "5.3.1", features = ["axum_extras", "uuid", "chrono"] }
utoipa-axum = { version = "0.1.4" }
utoipa-swagger-ui = { version = "8.1.1", features = ["axum", "vendored"] }
url = { version = "2.5.4", features = ["serde"] }
http = "1.2.0"
headers = "0.4.0"
jsonwebtoken = "9.3.0"
hyper = { version = "1.5.2", features = ["full"] }
hyper-util = { version = "0.1.10", features = ["full"] }
axum = { version = "0.8.1", features = ["ws", "macros"] }
axum-extra = { version = "0.10.0", features = ["typed-header"] }
tower = "0.5.2"
tower-http = { version = "0.6.2", features = ["trace"] }

# Email sending
lettre = { version = "0.11.11", default-features = false, features = ["tokio1-rustls-tls", "rustls-native-certs", "smtp-transport", "pool", "hostname", "builder"] }

# File hosting package extracting
flate2 = "1.0.35"
tar = "0.4.43"
mime = "0.3.17"

# Server TLS
tokio-rustls = { version = "0.26.1", default-features = false, features = ["logging", "tls12", "ring"] }
rustls-pemfile = "2.2.0"
rustls-acme = { version = "0.12.1", default-features = false, features = ["tokio", "ring", "tls12"] }

# Procedural macros
syn = { version = "2.0.96", features = ["full"] }
quote = "1.0.38"

# Test mode
inventory = "0.3.17"
tokio-tungstenite = { version = "0.26.1", features = ["rustls-tls-native-roots", "url"] }
pgp = "0.14.2"
bstr = "1.11.3"
async-openai = "0.27.0"
unicode-segmentation = "1.12.0"
nsfw = { version = "0.2.0", default-features = false }

# Firebase cloud messaging
[workspace.dependencies.fcm]
git = "https://github.com/jutuon/fcm-rust"
rev = "713e744005ccb9456f77655a2480a806e29e1b77"
default-features = false
features = ["rustls-tls-native-roots"]

# Face detection
[workspace.dependencies.rustface]
git = "https://github.com/jutuon/rustface"
rev = "271563b947d7906f2126e1dfaae292d900171bcb"
default-features = false

# Nude detection
[workspace.dependencies.nude]
git = "https://github.com/jutuon/nude-rs"
rev = "4cf5f66291706db20a53fac438da6566d5fc15e3"

# Make image processing faster for debug builds
[profile.dev.package.image]
opt-level = 3

# Improve build time
[profile.dev]
debug = 0
strip = "debuginfo"
