[workspace]
resolver = "3"
members = [
    # Binary crates
    "crates/afrodite-backend",
    # Library crates
    "crates/api_client",
    "crates/api_internal",
    "crates/model",
    "crates/model_server_data",
    "crates/model_server_state",
    "crates/model_chat",
    "crates/model_profile",
    "crates/model_media",
    "crates/model_account",
    "crates/config",
    "crates/utils",
    "crates/test_mode",
    "crates/test_mode_macro",
    "crates/database",
    "crates/database_chat",
    "crates/database_profile",
    "crates/database_media",
    "crates/database_account",
    "crates/server",
    "crates/server_common",
    "crates/server_state",
    "crates/server_router_chat",
    "crates/server_router_profile",
    "crates/server_router_media",
    "crates/server_router_account",
    "crates/server_api",
    "crates/server_api_chat",
    "crates/server_api_profile",
    "crates/server_api_media",
    "crates/server_api_account",
    "crates/server_data",
    "crates/server_data_chat",
    "crates/server_data_profile",
    "crates/server_data_media",
    "crates/server_data_account",
    "crates/server_data_all",
    "crates/simple_backend",
    "crates/simple_backend_image_process",
    "crates/simple_backend_config",
    "crates/simple_backend_utils",
    "crates/simple_backend_database",
    "crates/simple_backend_model",
    # Manager
    "crates/manager",
    "crates/manager_api",
    "crates/manager_config",
    "crates/manager_model",
    # TLS client config
    "crates/tls_client",
    "crates/tls_client_native",
    "crates/tls_client_rustls",
]

[workspace.dependencies]

# Build dependencies
vergen-gitcl = { version = "1.0.8", features = ["build", "cargo", "rustc"] }

error-stack = "0.5.0"
thiserror = "2.0.12"

# rand 0.9 is available but pgp uses rand 0.8
rand = "0.8.5"
rand_xoshiro = "0.6.0"
chrono = { version = "0.4.41", features = ["serde"] }
uuid = { version = "1.17.0", features = ["v4", "serde"] }
base64 = "0.22.1"
base16ct = { version = "0.2.0", features = ["alloc"] }
nalgebra = "0.33.2"
num_cpus = "1.17.0"
nix = { version = "0.30.1", default-features = false, features = ["signal"] }
image = { version = "0.25.6", default-features = false, features = ["jpeg"] }
mozjpeg = "0.10.13"
bitflags = "2.9.1"
num_enum = "0.7.4"
sha1 = "0.10.6"
sha2 = "0.10.9"
sysinfo = { version = "0.35.2", default-features = false, features = ["system"] }
ipnet = "2.11.0"
maxminddb = "0.26.0"

clap = { version = "4.5.40", features = ["cargo", "derive"] }

tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
# For tokio-console debugging. Disabled currently.
# If you want to enable this uncomment also .cargo
# console-subscriber = "0.4.1"

serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
serde_urlencoded = "0.7.1"
toml = "0.8.23"
toml_edit = "0.22.27"
csv = "1.3.1"

diesel = { version = "2.2.11", features = ["sqlite", "returning_clauses_for_sqlite_3_35", "chrono"] }
diesel_migrations = "2.2.0"
deadpool = { version = "0.12.2" }

futures = "0.3.31"
tokio = { version = "1.45.1", features = ["full"] }
tokio-stream = { version = "0.1.17", features = ["sync", "fs"] }
tokio-util = { version = "0.7.15", features = ["io"]}
async-trait = "0.1.88"

# tls_client_rustls and tls_client_rustls configures TLS
reqwest = { version = "0.12.20", default-features = false, features = ["json", "charset", "http2", "macos-system-configuration"] }
utoipa = { version = "5.4.0", features = ["axum_extras", "uuid", "chrono"] }
utoipa-axum = { version = "0.2.0" }
utoipa-swagger-ui = { version = "9.0.2", features = ["axum", "vendored"] }
url = { version = "2.5.4", features = ["serde"] }
http = "1.3.1"
headers = "0.4.1"
jsonwebtoken = "9.3.1"
hyper = { version = "1.6.0", features = ["full"] }
hyper-util = { version = "0.1.14", features = ["full"] }
axum = { version = "0.8.4", features = ["ws", "macros"] }
axum-extra = { version = "0.10.1", features = ["typed-header"] }
tower = "0.5.2"
tower-http = { version = "0.6.6", features = ["trace"] }

# Email sending, tls_client_rustls and tls_client_rustls configures TLS
lettre = { version = "0.11.17", default-features = false, features = ["smtp-transport", "pool", "hostname", "builder"] }

# File hosting package extracting
flate2 = "1.1.2"
tar = "0.4.44"
mime = "0.3.17"

# Server TLS
tokio-rustls = { version = "0.26.2", default-features = false, features = ["logging", "tls12", "ring"] }
rustls-pemfile = "2.2.0"
rustls-platform-verifier = "0.6.0"

# Procedural macros
syn = { version = "2.0.104", features = ["full"] }
quote = "1.0.40"

# Test mode
inventory = "0.3.20"
# tls_client_rustls and tls_client_rustls configures TLS.
# tokio-tungstenite 0.27 is available but axum uses 0.26.
tokio-tungstenite = { version = "0.26.1", features = ["url"] }
pgp = "0.16.0"
smallvec = "1.15.1"
async-openai = { version = "0.28.3", default-features = false }
unicode-segmentation = "1.12.0"
nsfw = { version = "0.2.0", default-features = false }

[workspace.dependencies.tokio-rustls-acme]
git = "https://github.com/jutuon/tokio-rustls-acme"
rev = "db4225a5f8c12ae2f6d77d8555a405db30a709ef"
default-features = false
features = ["rustls-tls-manual-roots"]

# Firebase cloud messaging, tls_client_rustls and tls_client_rustls configures TLS
[workspace.dependencies.fcm]
git = "https://github.com/jutuon/fcm-rust"
rev = "713e744005ccb9456f77655a2480a806e29e1b77"
default-features = false

# Face detection
[workspace.dependencies.rustface]
git = "https://github.com/jutuon/rustface"
rev = "271563b947d7906f2126e1dfaae292d900171bcb"
default-features = false

# Make image processing faster for debug builds
[profile.dev.package.image]
opt-level = 3

# Improve build time
[profile.dev]
debug = 0
strip = "debuginfo"
