[package]
name = "afrodite_backend"
description = "Afrodite dating app backend"
version = "0.6.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { workspace = true }

tokio = { workspace = true }
tokio-rustls = { workspace = true }

config = { path = "../config" }
test_mode = { path = "../test_mode" }
server = { path = "../server" }
server_data = { path = "../server_data" }

manager = { path = "../manager" }

simple_backend_image_process = { path = "../simple_backend_image_process" }
simple_backend_config = { path = "../simple_backend_config" }

# HTTP client TLS
tls_client_native = { path = "../tls_client_native", optional = true }
tls_client_rustls = { path = "../tls_client_rustls", optional = true }

[build-dependencies]
vergen-gitcl = { workspace = true }

[features]
default = [
    "tls_client_native?/enable",
    "tls_client_rustls?/enable",
]

tls-client-native = [
    "dep:tls_client_native",
    "tls_client_native/enable",
]

tls-client-rustls = [
    "dep:tls_client_rustls",
    "tls_client_rustls/enable",
]

[target.'cfg(target_os = "macos")'.dependencies]
# Running "make test" is faster with native TLS client on macOS.
tls_client_native = { path = "../tls_client_native", optional = false }

[target.'cfg(not(target_os = "macos"))'.dependencies]
tls_client_rustls = { path = "../tls_client_rustls", optional = false }
