[package]
name = "config"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { workspace = true, features = ["cargo", "derive"] }

sha2 = { workspace = true }
uuid = { workspace = true }

serde = { workspace = true, features = ["derive"] }
toml = { workspace = true }
toml_edit = { workspace = true }

reqwest = { workspace = true }
url = { workspace = true, features = ["serde"] }

thiserror = { workspace = true }
error-stack = { workspace = true }

model = { path = "../model" }

simple_backend_config = { path = "../simple_backend_config" }
simple_backend_utils = { path = "../simple_backend_utils" }
