[package]
name = "config"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { workspace = true }

sha2 = { workspace = true }

serde = { workspace = true }
toml = { workspace = true }
toml_edit = { workspace = true }
csv = { workspace = true }

chrono = { workspace = true }

reqwest = { workspace = true }
url = { workspace = true }

thiserror = { workspace = true }
error-stack = { workspace = true }

model = { path = "../model" }
model_account = { path = "../model_account" }

simple_backend_config = { path = "../simple_backend_config" }
simple_backend_utils = { path = "../simple_backend_utils" }
