[package]
name = "config"
version = "0.0.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { workspace = true }

sha2 = { workspace = true }
regex = { workspace = true }

serde = { workspace = true }
toml = { workspace = true }
toml_edit = { workspace = true }
csv = { workspace = true }

reqwest = { workspace = true }
url = { workspace = true }

thiserror = { workspace = true }
error-stack = { workspace = true }

model = { path = "../model" }
model_server_data = { path = "../model_server_data" }
model_server_state = { path = "../model_server_state" }

simple_backend_config = { path = "../simple_backend_config" }
simple_backend_utils = { path = "../simple_backend_utils" }

manager_config = { path = "../manager_config" }

# Allow building tests
tls_client = { path = "../tls_client" }
