[package]
name = "database"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

uuid = { workspace = true, features = ["v4", "serde"] }

serde_json = { workspace = true }

futures = { workspace = true }
tokio-stream = { workspace = true, features = ["sync"] }

sqlx = { workspace = true, features = [ "runtime-tokio-rustls", "sqlite", "uuid" ] }

diesel = { workspace = true, features = ["sqlite", "returning_clauses_for_sqlite_3_35"] }
diesel_migrations = { workspace = true }

error-stack = { workspace = true }

time = { workspace = true }

model = { path = "../model" }

simple_backend_config = { path = "../simple_backend_config" }
simple_backend_utils = { path = "../simple_backend_utils" }
simple_backend_database = { path = "../simple_backend_database" }
