[package]
name = "database"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

serde_json = { workspace = true }

diesel = { workspace = true, features = ["sqlite", "returning_clauses_for_sqlite_3_35"] }
diesel_migrations = { workspace = true }

error-stack = { workspace = true }

model = { path = "../model" }

simple_backend_config = { path = "../simple_backend_config" }
simple_backend_utils = { path = "../simple_backend_utils" }
simple_backend_database = { path = "../simple_backend_database" }
