[package]
name = "database"
version = "0.0.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

serde_json = { workspace = true }

diesel = { workspace = true }
diesel_migrations = { workspace = true }

chrono = { workspace = true }
error-stack = { workspace = true }

config = { path = "../config" }
model = { path = "../model" }

simple_backend = { path = "../simple_backend" }
simple_backend_config = { path = "../simple_backend_config" }
simple_backend_utils = { path = "../simple_backend_utils" }
simple_backend_database = { path = "../simple_backend_database" }
simple_backend_model = { path = "../simple_backend_model" }
