[package]
name = "database_account"
version = "0.0.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

diesel = { workspace = true }

error-stack = { workspace = true }

model = { path = "../model" }
model_account = { path = "../model_account" }
model_server_state = { path = "../model_server_state" }

database = { path = "../database" }

simple_backend_utils = { path = "../simple_backend_utils" }
