[package]
name = "database_chat"
version = "0.0.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

diesel = { workspace = true }

error-stack = { workspace = true }

model = { path = "../model" }
model_chat = { path = "../model_chat" }

database = { path = "../database" }

utils = { path = "../utils" }
simple_backend_utils = { path = "../simple_backend_utils" }
