[package]
name = "database_media"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

diesel = { workspace = true }

error-stack = { workspace = true }

model = { path = "../model" }

database = { path = "../database" }

simple_backend_utils = { path = "../simple_backend_utils" }
