[package]
name = "database_profile"
version = "0.0.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

diesel = { workspace = true }

error-stack = { workspace = true }

model = { path = "../model" }
model_profile = { path = "../model_profile" }

database = { path = "../database" }

config = { path = "../config" }

simple_backend_utils = { path = "../simple_backend_utils" }
simple_backend_model = { path = "../simple_backend_model" }
