[package]
name = "dating_app_backend"
description = "Afrodite dating app backend"
version = "0.5.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { workspace = true }

tokio = { workspace = true }
tokio-rustls = { workspace = true }

config = { path = "../config" }
test_mode = { path = "../test_mode" }
server = { path = "../server" }
server_data = { path = "../server_data" }
simple_backend_image_process = { path = "../simple_backend_image_process" }

simple_backend_config = { path = "../simple_backend_config" }

[build-dependencies]
vergen-gitcl = { workspace = true }
