[package]
name = "manager"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

thiserror = { workspace = true }
error-stack = { workspace = true }

tracing = { workspace = true }
tracing-subscriber = { workspace = true }

serde_json = { workspace = true }

futures = { workspace = true }
tokio = { workspace = true }

reqwest = { workspace = true }
sha2 = { workspace = true }
base16ct = { workspace = true }

# Server TLS
tokio-rustls = { workspace = true }

manager_api = { path = "../manager_api" }
manager_config = { path = "../manager_config" }
manager_model = { path = "../manager_model" }

simple_backend_utils = { path = "../simple_backend_utils" }
