[package]
name = "manager_api"
version = "0.0.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

error-stack = { workspace = true }
thiserror = { workspace = true }

futures = { workspace = true }
tokio = { workspace = true }

url = { workspace = true }
tokio-rustls = { workspace = true }

serde_json = { workspace = true }

manager_model = { path = "../manager_model" }

simple_backend_utils = { path = "../simple_backend_utils" }
