[package]
name = "manager_api_client"
version = "0.1.0"
authors = ["OpenAPI Generator team and contributors"]
description = "Afrodite manager API"
license = ""
edition = "2021"

[dependencies]
serde = { version = "^1.0", features = ["derive"] }
serde_json = "^1.0"
serde_repr = "^0.1"
url = "^2.5"
uuid = { version = "^1.8", features = ["serde", "v4"] }
reqwest = { workspace = true }
