[package]
name = "manager_config"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { workspace = true }

serde = { workspace = true }
toml = { workspace = true }

url = { workspace = true }

tokio = { workspace = true }
tracing = { workspace = true }

# Server TLS
tokio-rustls = { workspace = true }
rustls-pemfile = { workspace = true }

thiserror = { workspace = true }
error-stack = { workspace = true }

simple_backend_utils = { path = "../simple_backend_utils" }
manager_api = { path = "../manager_api" }
manager_model = { path = "../manager_model" }
