[package]
name = "manager_model"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num_enum = { workspace = true }

serde = { workspace = true }
utoipa = { workspace = true }

simple_backend_model = { path = "../simple_backend_model" }
