[package]
name = "model"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
uuid = { workspace = true }
utoipa = { workspace = true }
diesel = { workspace = true }

nalgebra = { workspace = true }
base64 = { workspace = true }
bitflags = { workspace = true }
chrono = { workspace = true }
num_enum = { workspace = true }

thiserror = { workspace = true }

simple_backend_model = { path = "../simple_backend_model"}

utils = { path = "../utils" }
