[package]
name = "model"
version = "0.0.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

serde = { workspace = true }
uuid = { workspace = true }
utoipa = { workspace = true }
diesel = { workspace = true }

base64 = { workspace = true }
bitflags = { workspace = true }
chrono = { workspace = true }
num_enum = { workspace = true }
toml = { workspace = true }
regex = { workspace = true }

thiserror = { workspace = true }

utils = { path = "../utils" }

simple_backend_model = { path = "../simple_backend_model"}
simple_backend_utils = { path = "../simple_backend_utils"}
