[package]
name = "model_account"
version = "0.0.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

serde = { workspace = true }
utoipa = { workspace = true }
diesel = { workspace = true }

chrono = { workspace = true }

utils = { path = "../utils" }
model = { path = "../model" }
model_server_data = { path = "../model_server_data" }
model_server_state = { path = "../model_server_state" }

simple_backend_model = { path = "../simple_backend_model"}
