[package]
name = "model_chat"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

serde = { workspace = true }
serde_json = { workspace = true }
utoipa = { workspace = true }
diesel = { workspace = true }

model = { path = "../model" }

simple_backend_model = { path = "../simple_backend_model"}
simple_backend_utils = { path = "../simple_backend_utils"}
