[package]
name = "model_chat"
version = "0.0.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

serde = { workspace = true }
utoipa = { workspace = true }
diesel = { workspace = true }

model = { path = "../model" }
model_server_data = { path = "../model_server_data" }

simple_backend_model = { path = "../simple_backend_model"}
simple_backend_utils = { path = "../simple_backend_utils"}
