[package]
name = "model_server_data"
version = "0.0.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
uuid = { workspace = true }
utoipa = { workspace = true }
diesel = { workspace = true }
base64 = { workspace = true }
sha2 = { workspace = true }

nalgebra = { workspace = true }
bitflags = { workspace = true }
num_enum = { workspace = true }

model = { path = "../model" }

simple_backend_model = { path = "../simple_backend_model"}
simple_backend_utils = { path = "../simple_backend_utils"}
