[package]
name = "model_server_data"
version = "0.0.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

serde = { workspace = true }
utoipa = { workspace = true }
diesel = { workspace = true }
unicode-segmentation = { workspace = true }

nalgebra = { workspace = true }
bitflags = { workspace = true }
num_enum = { workspace = true }

model = { path = "../model" }

simple_backend_model = { path = "../simple_backend_model"}
