[package]
name = "pihka-backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.2.14", features = ["cargo"] }
toml = "0.7.2"
uuid = { version = "1.1.2", features = ["v4", "serde"] }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

futures = "0.3.28"
tokio = { version = "1", features = ["full"] }
tokio-stream = { version = "0.1.10", features = ["sync"] }
tokio-util = { version = "0.7.7", features = ["io"]}
hyper = { version = "0.14", features = ["full"] }
axum = { version = "0.6", features = ["headers", "ws"] }
tower = "0.4.13"
tower-http = { version = "0.4.0", features = ["trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
mime = "0.3"
headers = "0.3.8"
reqwest = { version = "0.11", features = ["json"] }
url = { version = "2.3.1", features = ["serde"] }
bytes = "1.4.0"
http = "0.2.9"

# Server TLS
tokio-rustls = "0.24.0"
rustls-pemfile = "1.0.2"

utoipa = { version = "3.0.1", features = ["axum_extras", "uuid"] }
utoipa-swagger-ui = { version = "3.0.1", features = ["axum"] }


sqlx = { version = "0.7.1", features = [ "runtime-tokio-rustls", "sqlite", "uuid" ] }

diesel = { version = "2.1.0", features = ["sqlite"] }
diesel_migrations = "2.1.0"
deadpool = { version = "0.9.0" }
deadpool-diesel = { version = "0.4.1", features = ["sqlite"] }

num_cpus = "1.16.0"

thiserror = "1.0.37"
error-stack = "0.2.3"

async-trait = "0.1.66"


time = "0.3.20"
nalgebra = "0.32.2"

jsonwebtoken = "8.3.0"
base64 = "0.21.0"

config = { path = "../config" }
test_mode = { path = "../test_mode" }
server = { path = "../server" }

[build-dependencies]
vergen = { version = "8.0.0", features = ["cargo", "git", "gitcl", "rustc"] }
