[package]
name = "pihka-backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4", features = ["cargo", "derive"] }

tokio = { version = "1", features = ["full"] }

config = { path = "../config" }
test_mode = { path = "../test_mode" }
server = { path = "../server" }
image_process = { path = "../image_process" }

[build-dependencies]
vergen = { version = "8.0.0", features = ["cargo", "git", "gitcl", "rustc"] }
