[package]
name = "pihka-backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { workspace = true, features = ["cargo", "derive"] }

tokio = { workspace = true, features = ["full"] }

config = { path = "../config" }
test_mode = { path = "../test_mode" }
server = { path = "../server" }
server_api = { path = "../server_api" }
simple_backend_image_process = { path = "../simple_backend_image_process" }

simple_backend_config = { path = "../simple_backend_config" }

[build-dependencies]
vergen = { workspace = true, features = ["cargo", "git", "gitcl", "rustc"] }
