[package]
name = "server"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = { workspace = true }
tokio = { workspace = true, features = ["full"] }
axum = { workspace = true, features = ["ws", "macros"] }
tracing = { workspace = true }

utoipa = { workspace = true, features = ["axum_extras", "uuid"] }
utoipa-swagger-ui = { workspace = true, features = ["axum"] }

thiserror = { workspace = true }
error-stack = { workspace = true }

async-trait = { workspace = true }

nix = { workspace = true, default-features = false, features = ["signal"] }

config = { path = "../config" }
database = { path = "../database" }
model = { path = "../model" }

server_common = { path = "../server_common" }
server_api = { path = "../server_api" }
server_data = { path = "../server_data" }

simple_backend = { path = "../simple_backend" }
simple_backend_utils = { path = "../simple_backend_utils" }
simple_backend_config = { path = "../simple_backend_config" }
